# super_state_machine

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: coverage_report.yml  pre-commit.yml  tests.yml
docs/source/: conf.py  index.rst
docs/source/reference/: installation.rst
docs/source/reference/api/: api.rst
super_state_machine/: __init__.py  __version__.py  machines.py  utils.py
tests/: test_machines.py  test_transitions.py  test_utils.py
